--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <figcaption>A bundle of organic beets from a local farm food co-op program.</figcaption>
     </figure>
 
-    <p>55 to 65 days are needed from germination to harvest of the root.</p>
+    <p class="info">55 to 65 days are needed from germination to harvest of the root.</p>
     <p>The usually deep purple roots of <b>beetroot</b> are eaten either grilled, boiled, or roasted as a cooked vegetable, cold as a salad after cooking and adding oil and vinegar, or raw and shredded, either alone or combined with any salad vegetable.</p>
     <p>In fact, <cite>Jim Halpert</cite> once said this about beets, <q>“Fact, bears eat beets. Bears, beets, <i>Battlestar Galactica</i>.</q></p>
     <blockquote>I have some <em>weird</em> habits. For instance, <strong>I love beets</strong>. Show me a salad bar and I will clean them out of their beets.
-      <cite>Chris Pratt</cite></blockquote>
+      <cite class="chris">Chris Pratt</cite></blockquote>
 
     <h2>Common varieties</h2>
     <ol>
@@ -43,17 +43,17 @@
 
     <h2>Nutritional information</h2>
 
-    <p>Serving size: 100 mg</p>
-    <dl>
-      <dt>Energy:</dt>
-      <dd><data value="180">180 kJ</data></dd>
-      <dt>Carbohydrates</dt>
-      <dd><data value="9.96">9.96 g</data></dd>
-      <dt>Fat:</dt>
-      <dd><data value="0.18">0.18 g</data></dd>
-      <dt>Protein:</dt>
-      <dd><data value="1.68">1.68 g</data></dd>
-    </dl>
+      <p>Serving size: 100 mg</p>
+      <dl>
+        <dt>Energy:</dt>
+        <dd><data value="180">180 kJ</data></dd>
+        <dt>Carbohydrates</dt>
+        <dd><data value="9.96">9.96 g</data></dd>
+        <dt>Fat:</dt>
+        <dd><data value="0.18">0.18 g</data></dd>
+        <dt>Protein:</dt>
+        <dd><data value="1.68">1.68 g</data></dd>
+      </dl>
 
   </main>
   <aside>
