Make alot more corrections

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <cite class="chris">Chris Pratt</cite></blockquote>
 
     <h2>Common varieties</h2>
-    <ol>
+    <ol class="commonvarieties">
       <li>Albino</li>
       <li>Bull's Blood</li>
       <li>Chioggia</li>
